iowow (1.3.37) UNRELEASED; urgency=medium

  * Added RCGA macro definition

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 22 Jan 2020 22:42:51 +0700

iowow (1.3.36) testing; urgency=medium

  * Safer iowow initialization bootstrap process.

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 16 Jan 2020 12:44:31 +0700

iowow (1.3.35) testing; urgency=medium

  * Added specific checks for TARGET_OS_IPHONE
  * Ported to iOS
  * Added wal locking interceptor to WAL opts

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 15 Jan 2020 13:10:51 +0700

iowow (1.3.32) testing; urgency=medium

  * Improved WAL durability

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 19 Dec 2019 10:49:08 +0700

iowow (1.3.31) testing; urgency=medium

  * Keys comparison refactoring

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 20 Nov 2019 00:41:15 +0700

iowow (1.3.30) testing; urgency=medium

  * Added check if  __unused is already defined in `iwth.c`
  * CRITICAL Comparsions keys fix #30

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 19 Nov 2019 20:23:41 +0700

iowow (1.3.29) testing; urgency=medium

  * FIXED iwkv_open assertion fail on opening garbage file #29

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 13 Nov 2019 23:55:35 +0700

iowow (1.3.28) testing; urgency=medium

  * iwlog now supports ANDROID NDK logging (iwlog.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 07 Nov 2019 14:44:59 +0700

iowow (1.3.27) testing; urgency=medium

  * CRITICAL WAL durability fixes
  * Support of online backups #24
  * Windows platform functions fixes
  * CLion project files added
  * WAL recovering fixes

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 28 Oct 2019 19:08:59 +0700

iowow (1.3.25) testing; urgency=medium

  * CRITICAL Fixed heap corruption due incorrect usage of khash API in `_db_destroy_lw` (iwkv.c)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 29 Aug 2019 12:20:25 +0700

iowow (1.3.24) testing; urgency=medium

  * CRITICAL Fixed race condition in WAL rollforward
