@@ -184,11 +184,6 @@ static_assert(DBCNODE_STR_SZ >= offsetof(DBCNODE, lk) + SBLK_LKLEN,
 
 /** Tallest SBLK nodes cache */
 typedef struct DBCACHE {
-#ifdef IW_HAVE_ATOMICS64
-  atomic_uint_least64_t atime;  /**< Cache access MONOTONIC time (ms) */
-#else
-  uint64_t atime;
-#endif
   size_t asize;                 /**< Size of allocated cache buffer */
   size_t num;                   /**< Actual number of nodes */
   size_t nsize;                 /**< Cached node size */
@@ -266,7 +261,6 @@ struct _IWKV {
 /** Database lookup context */
 typedef struct IWLCTX {
   IWDB db;
-  uint64_t ts;                /**< Context creation timestamp ms */
   const IWKV_val *key;        /**< Search key */
   IWKV_val *val;              /**< Update value */
   SBLK *lower;                /**< Next to upper bound block */
